[package]
name = "night-sky"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
wasm-bindgen = "0.2"
rand = "0.9"
getrandom = { version = "0.3", features = ["wasm_js"] }

[dependencies.web-sys]
features = ['CanvasRenderingContext2d', 'Document', 'Element', 'HtmlCanvasElement', 'Window', 'console', 'CanvasGradient', 'ImageData']
version = "0.3"